--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.32.1
+# streamlit==1.32.1
 # langchain-community==0.0.28
 # langchain-openai==0.0.8
 # langchain==0.1.11
 # openai==1.38.0
+streamlit
 langchain
 openai
 pypdf
