--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@
 streamlit
 langchain-community
 langchain-openai
-langchain
+langchain==0.1.20
+chromadb==0.4.0
 openai
 pypdf
-chromadb
+# chromadb
 chroma
 tiktoken
 pysqlite3-binary
